<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingBottom="0dip" android:paddingTop="3dip" android:layout_marginBottom="0dip" android:layout_weight="0">

        <Button
            android:id="@+id/episode_bar_all_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_all" android:background="#FFFFFFFF" android:layout_gravity="bottom" android:height="30dip" android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/episode_bar_download_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_download" android:layout_gravity="bottom" android:background="#FFC0C0C0" android:height="30dip" android:layout_marginLeft="2dip" android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/episode_bar_manage_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_manage" android:layout_gravity="bottom" android:background="#FFC0C0C0" android:height="30dip" android:layout_marginLeft="2dip" android:layout_width="fill_parent"/>

        <Button
            android:id="@+id/episode_bar_play_button"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/episode_bar_button_play" android:layout_gravity="bottom" android:background="#FFC0C0C0" android:height="30dip" android:layout_marginLeft="2dip" android:layout_width="fill_parent"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_weight="0"
        android:background="#FFFFFFFF" android:layout_marginBottom="3dip">

    </FrameLayout>
    
    <ListView android:id="@android:id/list"
        android:layout_width="fill_parent" 
        android:layout_height="0dip"
        android:layout_weight="1"
        />
	
    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/list_message_empty_item"
    />
</LinearLayout>
